# ThrowQuickGame

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-single-platform.yml
include/: Control.h  Game.h  Player.h  RenderWindow.h
src/: Control.cpp  Game.cpp  Player.cpp  RenderWindow.cpp
